--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.15",
     "@swimlane/ngx-charts": "^22.0.0",
+    "d3-shape": "^3.2.0",
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "html-to-image": "^1.11.13",
@@ -36,6 +37,7 @@
     "@angular-devkit/build-angular": "^19.2.15",
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/d3-shape": "^3.1.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
